src/components/Nav.scss
@import "../app/globals.scss";
$mobile-navheight: 5rem; // needed for calculations, kinda janky

@media screen and (max-width: $mobile-cutoff) {
  nav {
    max-height: $mobile-navheight !important;
    height: 100%;
  }
  .nav-items {
    z-index: 100;
    top: $mobile-navheight;
    position: absolute;
    flex-direction: column;
    gap: 0.5rem;
    box-shadow: 0 0 2rem rgba(0, 0, 0, 0.2);
    margin: 0;
    & > a {
      padding: 0.5rem;
    }
  }
  .menu-button {
    display: flex !important;
    justify-content: center;
    align-items: center;
    font-size: 2rem;
    color: white;
    // position: absolute;
    right: 1rem;
    top: 1rem;
    z-index: 1000;
    &:hover {
      color: $uci-yellow;
    }
  }
  .sub {
    display: none !important;
  }
  .logo-wrapper {
    flex-direction: row !important;
    justify-content: space-between !important;
  }
}

.menu-button {
  display: none;
}

nav {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.sub {
  color: white;
  font-family: $header-font;
  font-size: 0.9375rem;
  font-weight: 600;
  // text-transform: uppercase;
  display: flex;
  flex-direction: row;
  gap: 0.25rem;
  & > .em {
    color: $uci-yellow;
    font-weight: 800;
  }
}

.nav-items {
  font-family: $header-font;
  font-size: 0.875rem;
  font-weight: 700;
  text-transform: uppercase;
  display: flex;
  justify-content: center;
  width: 100%;
  background-color: $header-col;

  transition: 0.2s ease-in-out;
  & > a {
    padding: 1rem;
    &:hover {
      background-color: $uci-blue;
      color: white;
    }
  }
}

// uci ite logo
.logo-wrapper {
  background-color: $uci-blue;
  padding: 1rem 2rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  position: relative;
  & > .join-button {
    position: absolute;
    color: black;
    font-family: $header-font;
    text-transform: uppercase;
    font-weight: 700;
    font-size: 0.875rem;
    border: 3px solid $uci-yellow-dark;
    padding: 0.75rem 1.25rem;
    background-color: $uci-yellow;
    right: 1.25rem;
    &:hover {
      background-color: $uci-yellow-dark;
      // border-color: white;
      color: white;
    }
  }
}

.logo {
  display: flex;
  gap: .6rem;
  font-size: 3rem;
  font-weight: 700;
  font-family: "Neue Kabel EB";
  flex-direction: row;
  text-decoration: none;
  &:hover {
    background: none;
  }
}

.uci {
  color: $uci-yellow;
  text-decoration: underline dashed;
  text-decoration-color: $uci-yellow;
}

.anteater {
  
}

.ite {
  color: white;
  text-decoration: underline dashed;
  text-decoration-color: white;
}

